--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <section id="home" class="section active min-h-[calc(100vh-150px)] flex items-center">
             <div class="w-full text-center">
                 <div class="max-w-4xl mx-auto">
-                    <img src="IMG_6186.jpg" alt="Joshua Berkoh" class="w-40 h-40 rounded-full mx-auto mb-6 border-4 border-white shadow-lg object-cover">
+                    <img src="IMG_6186.JPG" alt="Joshua Berkoh" class="w-40 h-40 rounded-full mx-auto mb-6 border-4 border-white shadow-lg object-cover">
                     <h1 class="text-4xl md:text-6xl font-bold text-gray-900 mb-4 leading-tight">Hi, I'm Joshua Berkoh</h1>
                     <p class="text-xl md:text-2xl text-indigo-600 font-medium mb-8">A Passionate Cybersecurity Professional</p>
                     <p class="text-lg text-gray-600 max-w-2xl mx-auto mb-10">A dedicated and results-driven cybersecurity professional with a passion for ethical hacking, threat analysis, and security engineering. Welcome to my personal corner of the internet. I'm excited to share my journey with you.</p>
