Fix image filename case

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <h2 class="text-4xl font-bold text-center mb-12 text-gray-900">About Me</h2>
                 <div class="grid md:grid-cols-3 gap-10 items-center">
                     <div class="md:col-span-1">
-                        <img src="IMG_6186.jpg" alt="Joshua Berkoh" class="rounded-lg shadow-xl w-full h-96 object-cover">
+                        <img src="IMG_6186.JPG" alt="Joshua Berkoh" class="rounded-lg shadow-xl w-full h-96 object-cover">
                     </div>
                     <div class="md:col-span-2">
                         <h3 class="text-2xl font-semibold text-gray-800 mb-4">My Journey in Cybersecurity</h3>
