--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="max-w-4xl mx-auto">
                 <h2 class="text-4xl font-bold text-center mb-12 text-gray-900">My Resume</h2>
                 <div class="text-center mb-12">
-                     <a href="Joshua Berkoh-Resume.pdf" download="Joshua_Berkoh_Resume.pdf" class="bg-indigo-600 text-white font-semibold px-8 py-3 rounded-lg hover:bg-indigo-700 transition-all duration-300 shadow-lg hover:shadow-xl">Download PDF</a>
+                     <a href="Joshua_Berkoh_Resume.pdf" download="Joshua_Berkoh_Resume.pdf" class="bg-indigo-600 text-white font-semibold px-8 py-3 rounded-lg hover:bg-indigo-700 transition-all duration-300 shadow-lg hover:shadow-xl">Download PDF</a>
                 </div>
                 <div class="bg-white p-8 md:p-12 rounded-lg shadow-xl">
                     <!-- Experience -->
