Update social links

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                         <p class="text-gray-600 mb-4">Hello! I'm Joshua Berkoh, a Cybersecurity Professional based in Cincinnati, OH. My passion lies at the intersection of offensive security and threat mitigation. I am currently pursuing a PhD in Information Technology at the University of Cincinnati, building upon my Master's degree in the same field. I've spent years honing my skills in web penetration testing, security operations, and threat analysis.</p>
                         <p class="text-gray-600 mb-6">Whether I'm hunting for bugs, analyzing advanced persistent threats, or mentoring the next generation of security experts, my goal is always the same: to make the digital world a safer place. I'm driven by curiosity and a desire to continuously learn and contribute to the cybersecurity community.</p>
                          <div class="flex space-x-4">
-                            <a href="#" class="text-gray-500 hover:text-indigo-600"><i data-lucide="linkedin" class="w-6 h-6"></i></a>
-                            <a href="#" class="text-gray-500 hover:text-indigo-600"><i data-lucide="github" class="w-6 h-6"></i></a>
+                            <a href="https://www.linkedin.com/in/joshfiifi/" aria-label="LinkedIn" class="text-gray-500 hover:text-indigo-600"><i data-lucide="linkedin" class="w-6 h-6"></i></a>
+                            <a href="https://github.com/joshberk" aria-label="GitHub" class="text-gray-500 hover:text-indigo-600"><i data-lucide="github" class="w-6 h-6"></i></a>
                             <a href="#" class="text-gray-500 hover:text-indigo-600"><i data-lucide="mail" class="w-6 h-6"></i></a>
                         </div>
                     </div>
@@ -340,8 +340,8 @@
     <footer class="bg-gray-800 text-white">
         <div class="container mx-auto px-6 py-8 text-center">
             <div class="flex justify-center space-x-6 mb-4">
-                <a href="#" class="hover:text-indigo-400"><i data-lucide="linkedin" class="w-6 h-6"></i></a>
-                <a href="#" class="hover:text-indigo-400"><i data-lucide="github" class="w-6 h-6"></i></a>
+                <a href="https://www.linkedin.com/in/joshfiifi/" aria-label="LinkedIn" class="hover:text-indigo-400"><i data-lucide="linkedin" class="w-6 h-6"></i></a>
+                <a href="https://github.com/joshberk" aria-label="GitHub" class="hover:text-indigo-400"><i data-lucide="github" class="w-6 h-6"></i></a>
                 <a href="mailto:joshuaberkoh19@gmail.com" class="hover:text-indigo-400"><i data-lucide="mail" class="w-6 h-6"></i></a>
             </div>
             <p>&copy; 2025 Joshua Berkoh. All Rights Reserved.</p>
