--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <section id="home" class="section active min-h-[calc(100vh-150px)] flex items-center">
             <div class="w-full text-center">
                 <div class="max-w-4xl mx-auto">
-                    <img src="IMG_6186.JPG" alt="Joshua Berkoh" class="w-40 h-40 rounded-full mx-auto mb-6 border-4 border-white shadow-lg object-cover">
+                    <img src="IMG_6186.JPG" alt="Joshua Berkoh" loading="lazy" class="w-40 h-40 rounded-full mx-auto mb-6 border-4 border-white shadow-lg object-cover">
                     <h1 class="text-4xl md:text-6xl font-bold text-gray-900 mb-4 leading-tight">Hi, I'm Joshua Berkoh</h1>
                     <p class="text-xl md:text-2xl text-indigo-600 font-medium mb-8">A Passionate Cybersecurity Professional</p>
                     <p class="text-lg text-gray-600 max-w-2xl mx-auto mb-10">A dedicated and results-driven cybersecurity professional with a passion for ethical hacking, threat analysis, and security engineering. Welcome to my personal corner of the internet. I'm excited to share my journey with you.</p>
@@ -103,7 +103,7 @@
                 <h2 class="text-4xl font-bold text-center mb-12 text-gray-900">About Me</h2>
                 <div class="grid md:grid-cols-3 gap-10 items-center">
                     <div class="md:col-span-1">
-                        <img src="IMG_6186.JPG" alt="Joshua Berkoh" class="rounded-lg shadow-xl w-full h-96 object-cover">
+                        <img src="IMG_6186.JPG" alt="Joshua Berkoh" loading="lazy" class="rounded-lg shadow-xl w-full h-96 object-cover">
                     </div>
                     <div class="md:col-span-2">
                         <h3 class="text-2xl font-semibold text-gray-800 mb-4">My Journey in Cybersecurity</h3>
