fix: improve accessibility and fix broken email link
- Fix missing email link in About section (was linking to "#")
- Add proper aria-labels for email links
- Improve alt text descriptions for project images
- Update contact form message to clarify direct email contact

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                          <div class="flex space-x-4">
                             <a href="https://www.linkedin.com/in/joshfiifi/" aria-label="LinkedIn" class="text-gray-500 hover:text-indigo-600"><i data-lucide="linkedin" class="w-6 h-6"></i></a>
                             <a href="https://github.com/joshberk" aria-label="GitHub" class="text-gray-500 hover:text-indigo-600"><i data-lucide="github" class="w-6 h-6"></i></a>
-                            <a href="#" class="text-gray-500 hover:text-indigo-600"><i data-lucide="mail" class="w-6 h-6"></i></a>
+                            <a href="mailto:joshuaberkoh19@gmail.com" aria-label="Email" class="text-gray-500 hover:text-indigo-600"><i data-lucide="mail" class="w-6 h-6"></i></a>
                         </div>
                     </div>
                 </div>
@@ -268,7 +268,7 @@
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Project Card 1 -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
-                        <img src="https://placehold.co/600x400/a3bfb8/ffffff?text=AppSec+CTF" alt="Appsec CTF" class="w-full h-48 object-cover">
+                        <img src="https://placehold.co/600x400/a3bfb8/ffffff?text=AppSec+CTF" alt="Security Innovation CTF - Web penetration testing demonstration" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-semibold mb-2 text-gray-800">Security Innovation CTF</h3>
                             <p class="text-gray-600 mb-4">Demonstrated proficiency in web penetration testing by exploiting SQLi, XSS, SSRF, and broken access control vulnerabilities in a competitive CTF.</p>
@@ -281,7 +281,7 @@
                     </div>
                     <!-- Project Card 2 -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
-                        <img src="https://placehold.co/600x400/d1c1d1/ffffff?text=Threat+Analysis" alt="Threat Analysis" class="w-full h-48 object-cover">
+                        <img src="https://placehold.co/600x400/d1c1d1/ffffff?text=Threat+Analysis" alt="Advanced Persistent Threat analysis and mitigation strategies" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-semibold mb-2 text-gray-800">APT Threat Analysis</h3>
                             <p class="text-gray-600 mb-4">Conducted in-depth analysis of Advanced Persistent Threats (APTs), identifying TTPs to develop proactive threat mitigation strategies.</p>
@@ -293,7 +293,7 @@
                     </div>
                     <!-- Project Card 3 -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
-                        <img src="https://placehold.co/600x400/f0e6cc/ffffff?text=Bug+Bounty" alt="Bug Bounty" class="w-full h-48 object-cover">
+                        <img src="https://placehold.co/600x400/f0e6cc/ffffff?text=Bug+Bounty" alt="Bug bounty hunting achievements and Hall of Fame recognitions" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-semibold mb-2 text-gray-800">Bug Bounty Hunter</h3>
                             <p class="text-gray-600 mb-4">Identified and reported critical vulnerabilities on 7 programs, receiving Hall of Fame recognition from multiple companies including Centrify and Arlo.</p>
@@ -330,7 +330,7 @@
                     </div>
                 </form>
                 <div id="form-submission-message" class="hidden mt-6 text-center text-green-600 bg-green-100 p-4 rounded-lg">
-                    Thank you! Your message has been sent successfully.
+                    Thank you for your message! Please email me directly at joshuaberkoh19@gmail.com for the fastest response.
                 </div>
             </div>
         </section>
